# explot

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  flake.nix  vcpkg.json  vistest.csv
src/: CMakeLists.txt  box.hpp  colors.cpp  colors.hpp  commands.hpp  coordinate_system_2d.cpp  coordinate_system_2d.hpp  coordinate_system_3d.cpp  coordinate_system_3d.hpp  csv.cpp  csv.hpp  data.cpp  data.hpp  drag_renderer.cpp  drag_renderer.hpp  enum_utilities.hpp  events.cpp  events.hpp  explot.cpp  font_atlas.cpp  font_atlas.hpp  fps_counter.cpp  fps_counter.hpp  framebuffer.cpp  framebuffer.hpp  gl-handle.hpp  graph2d.cpp  graph2d.hpp  graph3d.cpp  graph3d.hpp  impulse.cpp  impulse.hpp  layout.cpp  layout.hpp  legend.cpp  legend.hpp  line_drawing.cpp  line_drawing.hpp  line_type.cpp  line_type.hpp  (+36 more)
